--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ collaborative team environment.<br>
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/File%203.png);">
+					<a class="work" style="background-image: url(images/File%203.png);">
 						<div class="desc">
 							<h3>Smile and face detection</h3>
 							<span>This is ML based project that you can detect your face and app will play a music depends on your mood.</span>
@@ -164,7 +164,7 @@ collaborative team environment.<br>
 					</a>
 				</div>
                 <div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/File%202.png);">
+					<a class="work" style="background-image: url(images/File%202.png);">
 						<div class="desc">
 							<h3>5-minute workout</h3>
 							<span>Seamlessly integrating the functionality of a stopwatch with the energy of a 5-minute workout app</span>
@@ -172,7 +172,7 @@ collaborative team environment.<br>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/File%201.png);">
+					<a class="work" style="background-image: url(images/File%201.png);">
 						<div class="desc">
 							<h3>Rajasthan Revenue App</h3>
 							<span>This app made for Govt. Notification, circulars etc, so employee can easily see and download with
@@ -181,7 +181,7 @@ formats.</span>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/File%204.png);">
+					<a class="work" style="background-image: url(images/File%204.png);">
 						<div class="desc">
 							<h3>Meditation Music</h3>
 							<span>"This app is all about meditation with music. Whether you're trying to relax, sleep better, or ease your mind from stress, our selection of soothing tunes is here to help you find your inner peace."</span>
@@ -189,7 +189,7 @@ formats.</span>
 					</a>
 				</div>
                 <div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/File%209.png);">
+					<a class="work" style="background-image: url(images/File%209.png);">
 						<div class="desc">
 							<h3>Weather App</h3>
 							<span>Fetch the weather for different cities and country</span>
@@ -197,7 +197,7 @@ formats.</span>
 					</a>
 				</div>
                 <div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/File%2010.png);">
+					<a class="work" style="background-image: url(images/File%2010.png);">
 						<div class="desc">
 							<h3>Covid-19 tracker</h3>
 							<span>#</span>
@@ -205,7 +205,7 @@ formats.</span>
 					</a>
 				</div>
                 <div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/File%206.png);">
+					<a class="work" style="background-image: url(images/File%206.png);">
 						<div class="desc">
 							<h3>PDF MAKER</h3>
 							<span>User can add text and convert to PDF</span>
@@ -213,7 +213,7 @@ formats.</span>
 					</a>
 				</div>
                 <div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/File%208.png);">
+					<a class="work" style="background-image: url(images/File%208.png);">
 						<div class="desc">
 							<h3>#</h3>
 							<span>#</span>
@@ -221,7 +221,7 @@ formats.</span>
 					</a>
 				</div>
                 <div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/File%207.png);">
+					<a class="work" style="background-image: url(images/File%207.png);">
 						<div class="desc">
 							<h3>Bigha-Biswa-Hectare Converter</h3>
 							<span>Convert Bigha-Biswa to Hectare and Hectare to Bigha-Biswa with Jarib (ft)</span>
@@ -230,7 +230,7 @@ formats.</span>
 				</div>
                 
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/c1.png);">
+					<a class="work" style="background-image: url(images/c1.png);">
 						<div class="desc">
 							<h3>Courses UI (SwiftUI, iOS)</h3>
 							<span>#</span>
@@ -249,7 +249,7 @@ formats.</span>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/game1.png);"></a>
+						<a class="blog-bg" style="background-image: url(images/game1.png);"></a>
 						<div class="blog-text">
 							<h3><a href="#">Box Shooter (3D)</a></h3>
 						</div> 
@@ -257,7 +257,7 @@ formats.</span>
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/game2.png);"></a>
+						<a class="blog-bg" style="background-image: url(images/game2.png);"></a>
 						<div class="blog-text">
 							<h3><a href="#">RollerB(3D)</a></h3>
 						</div> 
@@ -265,7 +265,7 @@ formats.</span>
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/game3.png);"></a>
+						<a class="blog-bg" style="background-image: url(images/game3.png);"></a>
 						<div class="blog-text">
 							<h3><a href="#">SuperSpartyBros (2D)</a></h3>
 						</div> 
